adding blogs page

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -3,6 +3,6 @@
         <li class="shuffle-text"><a href="/index.html">Homepage</a></li>
         <li class="shuffle-text"><a href="/social.html">Social</a></li>
         <li class="shuffle-text"><a href="/my-projects.html">My Projects</a></li>
-        <li class="shuffle-text"><a href="/work-in-progress.html">Blogs</a></li>
+        <li class="shuffle-text"><a href="/blogs.html">Blogs</a></li>
     </ul>
 </nav>
