--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -3,6 +3,6 @@
         <a href="/index.html" class="menu-link">Home</a>
         <a href="/social.html" class="menu-link">Social</a>
         <a href="/my-projects.html" class="menu-link">My Projects</a>
-        <a href="/work-in-progress.html" class="menu-link">Blogs</a>
+        <a href="/blogs.html" class="menu-link">Blogs</a>
     </div>
 </div>
