added google tags.

--- a/games/galaxy-crusaders.html
+++ b/games/galaxy-crusaders.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galaxy Defender</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VS2WHLJQNE"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-VS2WHLJQNE');
+    </script>
+    <title>Galaxy Crusaders</title>
+    <link rel="shortcut icon" href="/imgs/favicon.png" type="image/x-icon" />
     <style>
         body {
             margin: 0;
