added galaxy crusaders to the my projects.

--- a/my-projects.html
+++ b/my-projects.html
@@ -293,6 +293,21 @@
                 </div>
             </a>
 
+            <a href="/games/galaxy-crusaders.html" class="project-tile">
+                <div class="project-icon">
+                    <img src="/imgs/galaxy-crusaders.jpg" alt="Galaxy Crusaders Icon" width="50">
+                </div>
+                <div class="project-content">
+                    <h3 class="project-title">Galaxy Crusaders</h3>
+                    <p class="project-description">
+                        A thrilling single-player HTML5 space defense game where you’re the
+                        galaxy’s last hope. Inspired by classic titles like Galaxy Defenders, you'll command a lone
+                        starship, battling relentless waves of alien forces to protect the cosmos. With fast-paced
+                        action, strategic upgrades, and immersive space battles, it’s up to you to save the galaxy from
+                        destruction.
+                    </p>
+                </div>
+            </a>
             <!-- When adding more tiles, remove the "two-tiles" class from projects-grid -->
             <!-- <a href="LINK_TO_PROJECT_3" class="project-tile">...</a> -->
         </div>
