--- a/games/galaxy-crusaders.html
+++ b/games/galaxy-crusaders.html
@@ -13,7 +13,7 @@
         gtag('config', 'G-VS2WHLJQNE');
     </script>
     <title>Galaxy Crusaders</title>
-    <link rel="shortcut icon" href="/imgs/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/imgs/galaxy-crusaders-favicon.png" type="image/x-icon" />
     <style>
         body {
             margin: 0;
