--- a/my-projects.html
+++ b/my-projects.html
@@ -301,7 +301,7 @@
                     <h3 class="project-title">Galaxy Crusaders</h3>
                     <p class="project-description">
                         A thrilling single-player HTML5 space defense game where you’re the
-                        galaxy’s last hope. Inspired by classic titles like Galaxy Defenders, you'll command a lone
+                        galaxy’s last hope. Inspired by classic titles like Space Invaders, you'll command a lone
                         starship, battling relentless waves of alien forces to protect the cosmos. With fast-paced
                         action, strategic upgrades, and immersive space battles, it’s up to you to save the galaxy from
                         destruction.
