added github and medium, removed socials from apps.

--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
 		</div>
 	</section>
 	<div class="social-handle">
+		<a href="https://github.com/ravzzy" target="_blank">
+            <i class="fa-brands fa-github"></i>
+        </a>
 		<a href="https://www.instagram.com/swiftwindwalker" target="_blank">
 			<i class="fa-brands fa-instagram"></i>
 		</a>
@@ -145,6 +148,9 @@
 		<a href="https://www.youtube.com/ravzzy" target="_blank">
 			<i class="fa-brands fa-youtube"></i>
 		</a>
+		<a href="https://medium.com/@ravzzy" target="_blank">
+            <i class="fa-brands fa-medium"></i>
+        </a>
 	</div>
 	<!--<div class="avatars">
 			<section>
