--- a/my-projects.html
+++ b/my-projects.html
@@ -314,6 +314,9 @@
     </div>
 
     <div class="social-handle">
+        <a href="https://github.com/ravzzy" target="_blank">
+            <i class="fa-brands fa-github"></i>
+        </a>
         <a href="https://www.instagram.com/swiftwindwalker" target="_blank">
             <i class="fa-brands fa-instagram"></i>
         </a>
@@ -325,6 +328,9 @@
         </a>
         <a href="https://www.youtube.com/ravzzy" target="_blank">
             <i class="fa-brands fa-youtube"></i>
+        </a>
+        <a href="https://medium.com/@ravzzy" target="_blank">
+            <i class="fa-brands fa-medium"></i>
         </a>
     </div>
     <div class="footer"> &copy;2025 ravzzy</div>
