--- a/social.html
+++ b/social.html
@@ -270,6 +270,11 @@
 
 
         /* Specific color for each icon */
+        .fa-github {
+            color: lightblue !important;
+            /* Facebook blue */
+        }
+
         .fa-facebook {
             color: #3b5998 !important;
             /* Facebook blue */
@@ -293,6 +298,11 @@
         .fa-linkedin {
             color: #0077b5 !important;
             /* LinkedIn blue */
+        }
+
+        .fa-medium {
+            color: lightgray !important;
+            /* Facebook blue */
         }
 
         @media (max-width: 768px) {
@@ -654,6 +664,9 @@
         <!-- Add more social cards as needed -->
 
         <div class="social-handle">
+            <a href="https://github.com/ravzzy" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
             <a href="https://www.instagram.com/swiftwindwalker" target="_blank">
                 <i class="fa-brands fa-instagram"></i>
             </a>
@@ -665,6 +678,9 @@
             </a>
             <a href="https://www.youtube.com/ravzzy" target="_blank">
                 <i class="fa-brands fa-youtube"></i>
+            </a>
+            <a href="https://medium.com/@ravzzy" target="_blank">
+                <i class="fa-brands fa-medium"></i>
             </a>
         </div>
         <div class="footer"> &copy;2025 ravzzy</div>
