--- a/my-projects.html
+++ b/my-projects.html
@@ -308,6 +308,19 @@
                     </p>
                 </div>
             </a>
+
+            <a href="/app/code-reviewer/home.html" class="project-tile">
+                <div class="project-icon">
+                    <img src="/imgs/code-mancer.jpg" alt="Code Mancer Icon" width="50">
+                </div>
+                <div class="project-content">
+                    <h3 class="project-title">Code Mancer</h3>
+                    <p class="project-description">
+                        An AI-powered code review assistant running Microsoft's Phi-2 locally on your machine for private,
+                        anonymous, no-ads and secure code analysis without sharing your code online.
+                    </p>
+                </div>
+            </a>
             <!-- When adding more tiles, remove the "two-tiles" class from projects-grid -->
             <!-- <a href="LINK_TO_PROJECT_3" class="project-tile">...</a> -->
         </div>
