changed galaxy crusaders images.

--- a/my-projects.html
+++ b/my-projects.html
@@ -295,7 +295,7 @@
 
             <a href="/games/galaxy-crusaders.html" class="project-tile">
                 <div class="project-icon">
-                    <img src="/imgs/galaxy-crusaders.jpg" alt="Galaxy Crusaders Icon" width="50">
+                    <img src="/imgs/galaxy-crusaders.png" alt="Galaxy Crusaders Icon" width="50">
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Galaxy Crusaders</h3>
