further updates to my-projects

--- a/my-projects.html
+++ b/my-projects.html
@@ -421,10 +421,10 @@
         <article class="card">
             <header class="card-header">
                 <a href="/app/speedtest/home.html" style="text-decoration: none; color:white;">
-                    <h2>Anonymous Browser Based Speed Test <br>(No Ads)</h2>
+                    <h2>Speed Test</h2>
                 </a>
                 <p><br>A lightweight, privacy-focused internet speed test that runs directly
-                    in your browser without tracking, ads, or requiring personal data.</p>
+                    in your browser without ads.</p>
             </header>
             <div class="card-author">
                 <a href="/app/speedtest/home.html" class="author-avatar">
