updated my projects with adding p also href and added medium/github links to blogs page.

--- a/my-projects.html
+++ b/my-projects.html
@@ -415,16 +415,18 @@
     <div id="sidebar-container" class="sidebar-container"></div> <!-- Sidebar will be inserted here via js -->
     <header class="text-center py-6 border-b border-gray-200 px-4">
         <h1 class="text-4xl sm:text-2xl font-semibold headline tracking-widest">My Projects</h1>
-        <p class="uppercase text-xs mt-2 tracking-wider text-gray-500">Click on the tile header, you must. Explore my projects, you will.</p>
+        <p class="uppercase text-xs mt-2 tracking-wider text-gray-500">Click on the tile header, you must. Explore my
+            projects, you will.</p>
     </header>
     <section class="card-list">
         <article class="card">
             <header class="card-header">
-                <a href="/app/speedtest/home.html" style="text-decoration: none; color:white;">
-                    <h2>Speed Test</h2>
+                <a href="/app/speedtest/home.html" style="text-decoration: none;">
+                    <h2 style=color:white;>Speed Test</h2>
+                    <p><br>A lightweight, privacy-focused internet speed test that runs directly
+                        in your browser without ads.</p>
                 </a>
-                <p><br>A lightweight, privacy-focused internet speed test that runs directly
-                    in your browser without ads.</p>
+
             </header>
             <div class="card-author">
                 <a href="/app/speedtest/home.html" class="author-avatar">
@@ -439,13 +441,14 @@
                 </div>
             </div>
         </article>
+
         <article class="card">
             <header class="card-header">
-                <a href="/app/remove-background/home.html" style="text-decoration: none; color:white;">
-                    <h2>GhostCut AI</h2>
+                <a href="/app/remove-background/home.html" style="text-decoration: none;">
+                    <h2 style="color:white;">GhostCut AI</h2>
+                    <p><br>A fast, AI-powered tool that removes backgrounds from images
+                        instantly—no downloads, accounts, or watermarks. Just upload, edit, and download in seconds.</p>
                 </a>
-                <p><br>A fast, AI-powered tool that removes backgrounds from images
-                    instantly—no downloads, accounts, or watermarks. Just upload, edit, and download in seconds.</p>
             </header>
             <div class="card-author">
                 <a href="/app/remove-background/home.html" class="author-avatar">
@@ -462,11 +465,11 @@
         </article>
         <article class="card">
             <header class="card-header">
-                <a href="/app/kanban-board/home.html" style="text-decoration: none; color:white;">
-                    <h2>Kanban Board</h2>
+                <a href="/app/kanban-board/home.html" style="text-decoration: none;">
+                    <h2 style=" color:white;">Kanban Board</h2>
+                    <p><br>An HTML-based Kanban board is a simple, interactive task management
+                        tool that helps users organize and track their tasks visually.</p>
                 </a>
-                <p><br>An HTML-based Kanban board is a simple, interactive task management
-                    tool that helps users organize and track their tasks visually.</p>
             </header>
             <div class="card-author">
                 <a href="/app/kanban-board/home.html" class="author-avatar">
@@ -483,11 +486,12 @@
         </article>
         <article class="card">
             <header class="card-header">
-                <a href="/games/galaxy-crusaders.html" style="text-decoration: none; color:white;">
-                    <h2>Galaxy Crusaders</h2>
+                <a href="/games/galaxy-crusaders.html" style="text-decoration: none;">
+                    <h2 style="color:white;">Galaxy Crusaders</h2>
+                    <p><br>A thrilling single-player HTML5 space defense game where you're the
+                        galaxy's last hope. You'll command a lone starship, battling relentless waves of alien forces to
+                        protect the cosmos.</p>
                 </a>
-                <p><br>A thrilling single-player HTML5 space defense game where you're the
-                    galaxy's last hope. You'll command a lone starship, battling relentless waves of alien forces to protect the cosmos.</p>
             </header>
             <div class="card-author">
                 <a href="/games/galaxy-crusaders.html" class="author-avatar">
@@ -504,13 +508,14 @@
         </article>
         <article class="card">
             <header class="card-header">
-                <a href="/app/code-reviewer/home.html" style="text-decoration: none; color:white;">
-                    <h2>Code Mancer</h2>
+                <a href="/app/code-reviewer/home.html" style="text-decoration: none;">
+                    <h2 style="color:white;">Code Mancer</h2>
+                    <p><br>An AI-powered code review assistant running Microsoft's Phi-2 locally on your machine for
+                        private,
+                        anonymous, no-ads and secure code analysis without sharing your code online.
+                    </p>
                 </a>
-                <p><br>An AI-powered code review assistant running Microsoft's Phi-2 locally on your machine for
-                    private,
-                    anonymous, no-ads and secure code analysis without sharing your code online.
-                </p>
+
             </header>
             <div class="card-author">
                 <a href="/app/code-reviewer/home.html" class="author-avatar">
