--- a/blogs.html
+++ b/blogs.html
@@ -169,6 +169,9 @@
         </div>
     </main>
     <div class="social-handle">
+        <a href="https://github.com/ravzzy" target="_blank">
+            <i class="fa-brands fa-github"></i>
+        </a>
         <a href="https://www.instagram.com/swiftwindwalker" target="_blank">
             <i class="fa-brands fa-instagram"></i>
         </a>
@@ -180,6 +183,9 @@
         </a>
         <a href="https://www.youtube.com/ravzzy" target="_blank">
             <i class="fa-brands fa-youtube"></i>
+        </a>
+        <a href="https://medium.com/@ravzzy" target="_blank">
+            <i class="fa-brands fa-medium"></i>
         </a>
     </div>
     <div class="footer"> &copy;2025 ravzzy</div>
