header re-size for blogs, myprojects and social page

--- a/blogs.html
+++ b/blogs.html
@@ -156,9 +156,9 @@
     <div id="sidebar-container" class="sidebar-container"></div> <!-- Sidebar will be inserted here via js -->
     
     <!-- Header -->
-    <header class="text-center py-10 border-b border-gray-200 px-4">
-        <h1 class="text-4xl sm:text-5xl font-semibold headline tracking-widest">Echoes of the Force</h1>
-        <p class="uppercase text-sm mt-2 tracking-wider text-gray-500">In every story, the Force flows. Through words,
+    <header class="text-center py-10 border-b border-gray-200 px-2">
+        <h1 class="text-4xl sm:text-4xl font-semibold headline tracking-widest">Echoes of the Force</h1>
+        <p class="uppercase text-xs mt-2 tracking-wider text-gray-500">In every story, the Force flows. Through words,
             we find balance</p>
     </header>
 
