--- a/my-projects.html
+++ b/my-projects.html
@@ -27,6 +27,7 @@
 <style>
     @import url('https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400;500&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@400;500&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
     body {
         font-family: 'Inter', sans-serif;
@@ -219,11 +220,6 @@
         font-weight: 400;
         font-size: 0.7rem;
         text-align: center;
-    }
-
-    .nav-menu a {
-        text-transform: uppercase;
-        font-size: 0.7rem;
     }
 
     .social-handle {
