improved navbar and sidebar loading

--- a/app/code-reviewer/home.html
+++ b/app/code-reviewer/home.html
@@ -10,7 +10,6 @@
   <link href="https://db.onlinewebfonts.com/c/f1133d34c861b65dbfcd58acb2df0b4e?family=Schelter+Grotesk+NF+W01+Rg"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
   integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
   crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -21,9 +20,10 @@
 
     gtag('config', 'G-VS2WHLJQNE');
   </script>
-  <script type="module" src="/js/onload.js" defer></script>
-  <script type="module" src="/js/navbar.js" defer></script>
-  <script type="module" src="/js/sidebar.js" defer></script>
+  <script type="module" src="/js/onload.js"></script>
+  <script type="module" src="/js/navbar.js"></script>
+  <script type="module" src="/js/sidebar.js"></script>
+  <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="/imgs/code-mancer.jpg" type="image/x-icon" />
 </head>
 
