--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 		integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/ScrollToPlugin.min.js"></script>
-	<script type="module" src="./js/onload.js" defer></script>
-	<script type="module" src="./js/navbar.js" defer></script>
-	<script type="module" src="./js/sidebar.js" defer></script>
+	<script type="module" src="./js/onload.js"></script>
+	<script type="module" src="./js/navbar.js"></script>
+	<script type="module" src="./js/sidebar.js"></script>
 	<script src="./js/app.js" defer></script>
 	<link rel="shortcut icon" href="./imgs/favicon.png" type="image/x-icon" />
 </head>
