--- a/social.html
+++ b/social.html
@@ -20,9 +20,9 @@
 
         gtag('config', 'G-VS2WHLJQNE');
     </script>
-    <script type="module" src="/js/onload.js" defer></script>
-    <script type="module" src="/js/navbar.js" defer></script>
-    <script type="module" src="/js/sidebar.js" defer></script>
+    <script type="module" src="/js/onload.js"></script>
+    <script type="module" src="/js/navbar.js"></script>
+    <script type="module" src="/js/sidebar.js"></script>
     <link rel="shortcut icon" href="/imgs/favicon.png" type="image/x-icon" />
     <script src="https://cdn.tailwindcss.com"></script>
 
