removed audio files as it was causing hang issue on mobile

--- a/games/galaxy-crusaders.html
+++ b/games/galaxy-crusaders.html
@@ -719,12 +719,12 @@
         
         // Sound effects
         const sounds = {
-            shoot: { url: './sounds/lasershoot-2.wav', audio: null },
-            explosion: { url: './sounds/explosion.wav', audio: null },
-            powerup: { url: '.sounds/pickupCoin.wav', audio: null },
-            gameover: { url: './sounds/gameover.wav', audio: null },
-            levelup: { url: '.sounds/pickupCoin.wav', audio: null },
-            penalty: { url: './sounds/hithurt.wav', audio: null }
+            shoot: { url: 'https://assets.mixkit.co/sfx/preview/mixkit-short-laser-gun-shot-1670.mp3', audio: null },
+            explosion: { url: 'https://assets.mixkit.co/sfx/preview/mixkit-arcade-game-explosion-2759.mp3', audio: null },
+            powerup: { url: 'https://assets.mixkit.co/sfx/preview/mixkit-unlock-game-notification-253.mp3', audio: null },
+            gameover: { url: 'https://assets.mixkit.co/sfx/preview/mixkit-retro-arcade-lose-2027.mp3', audio: null },
+            levelup: { url: 'https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3', audio: null },
+            penalty: { url: 'https://assets.mixkit.co/sfx/preview/mixkit-arcade-retro-game-over-213.mp3', audio: null }
         };
         
         function loadSounds() {
