--- a/demo/hologram/home.html
+++ b/demo/hologram/home.html
@@ -13,32 +13,49 @@
 
         gtag('config', 'G-VS2WHLJQNE');
     </script>
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script type="module" src="/js/onload.js"></script>
     <script type="module" src="/js/navbar.js"></script>
     <script type="module" src="/js/sidebar.js"></script>
     <link rel="shortcut icon" href="/imgs/favicon.png" type="image/x-icon" />
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <style>
-        body {
-            margin: 0;
-            height: 100vh;
-            background: #000;
-            overflow: hidden;
-            font-family: Arial, sans-serif;
-        }
+            @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-        model-viewer {
+
+        /* Prevent any scrolling on the page */
+        html,
+        body {
+            overflow: hidden;
             width: 100%;
             height: 100%;
+            position: fixed;
+
+            /* This completely prevents scrolling */
+        }
+
+        body {
+            margin: 0;
+            font-size: 8px;
+            font-family: 'Noto Sans KR', sans-serif;
+            background: #000;
+        }
+
+        /* Ensure model viewer stays properly sized */
+
+        model-viewer {
+            width: 100vw;
+            height: 100vh;
+            position: fixed;
+            top: 0;
+            left: 0;
             --poster-color: transparent;
         }
 
         .controls {
             position: absolute;
-            bottom: 20px;
+            bottom: 30px;
             left: 0;
             right: 0;
             display: flex;
@@ -47,8 +64,9 @@
             z-index: 10;
         }
 
-        button {
-            padding: 10px 15px;
+       .controls button {
+            padding: 12px 20px;
+            font-size: 1rem;
             background: rgba(0, 150, 255, 0.7);
             color: white;
             border: none;
@@ -58,7 +76,7 @@
             transition: all 0.3s;
         }
 
-        button:hover {
+        .controls button:hover {
             background: rgba(0, 150, 255, 1);
             transform: scale(1.05);
         }
@@ -89,10 +107,14 @@
 
 
         .footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin-top: 0;
             text-transform: uppercase;
             color: white;
-            margin-top: 2vh;
-            height: 5vh;
+            height: 3vh;
             font-weight: 400;
             font-size: 0.7rem;
             text-align: center;
@@ -138,6 +160,7 @@
             z-index: 20;
             /* Ensure the hovered icon is on top */
         }
+
         .nav-menu a {
             color: white;
         }
@@ -178,6 +201,27 @@
             color: white !important;
             /* LinkedIn blue */
         }
+
+        @media (orientation: portrait) {
+
+            /* Larger buttons for mobile */
+            .controls button {
+                padding: 16px 24px;
+                font-size: 2.5rem;
+                margin-bottom: 3rem;
+            }
+
+            /* Adjust control spacing for mobile */
+            .controls {
+                bottom: 30px;
+                gap: 15px;
+            }
+
+            /* Make sure model viewer takes full mobile viewport */
+            model-viewer {
+                height: calc(100vh - 60px);
+            }
+        }
     </style>
 </head>
 
@@ -185,7 +229,7 @@
     <div id="navbar-container" class="navbar-container"></div> <!-- Navbar will be inserted here via js-->
     <button class="menu-btn">☰</button>
     <div id="sidebar-container" class="sidebar-container"></div> <!-- Sidebar will be inserted here via js -->
-   
+
     <!-- Holographic effect overlay -->
     <div class="holographic-effect"></div>
 
@@ -223,6 +267,11 @@
     <div class="footer"> &copy;2025 ravzzy</div>
 
     <script>
+        // Add this at the beginning of your script to prevent touch scrolling
+        document.addEventListener('touchmove', function (e) {
+            e.preventDefault();
+        }, { passive: false });
+
         const modelViewer = document.querySelector('#hologram');
         const arButton = document.getElementById('ar-button');
         const animateButton = document.getElementById('animate-button');
@@ -274,9 +323,9 @@
         modelViewer.addEventListener('load', () => {
             // Create dynamic lighting
             const lighting = document.createElement('div');
-            lighting.style.position = 'absolute';
-            lighting.style.width = '100%';
-            lighting.style.height = '100%';
+            lighting.style.position = 'fixed'; // Changed from absolute to fixed
+            lighting.style.width = '100vw';
+            lighting.style.height = '100vh';
             lighting.style.background = 'radial-gradient(circle at center, rgba(0,255,255,0.1) 0%, transparent 60%)';
             lighting.style.pointerEvents = 'none';
             lighting.style.animation = 'rotate 20s linear infinite';
@@ -285,13 +334,22 @@
             // Add CSS for lighting animation
             const style = document.createElement('style');
             style.textContent = `
-                @keyframes rotate {
-                    from { transform: rotate(0deg); }
-                    to { transform: rotate(360deg); }
-                }
-            `;
+            @keyframes rotate {
+                from { transform: rotate(0deg); }
+                to { transform: rotate(360deg); }
+            }
+        `;
             document.head.appendChild(style);
         });
+
+        // Handle mobile viewport height issues
+        function setViewportHeight() {
+            let vh = window.innerHeight * 0.01;
+            document.documentElement.style.setProperty('--vh', `${vh}px`);
+        }
+
+        setViewportHeight();
+        window.addEventListener('resize', setViewportHeight);
     </script>
 </body>
 
